# engine_computer

./: .gitignore  1674086230.csv  1674086506.csv  1674086692.csv  1674179513.csv  1674179575.csv  1674179634.csv  1674179666.csv  1674179738.csv  2023-10-28-16:33:56.csv  2023-10-28-18:09:52.csv  CMakeCache.txt  CMakeLists.txt  README.md  banana  banana.csv  engine  graph_vals.py  helpers.cpp  helpers.h  main  main.cpp  potato.txt  testing  testing.py  testing_cpp  testing_labjack_ljm.cpp
legacy/: -lah  CMakeCache.txt  CMakeLists.txt  Makefile
legacy/logs/: P1_1673725355.txt  P1_1673725552.txt  P1_1673725841.txt  P1_1673727733.txt  P1_FINAL__1673727976.txt  P2_1673722963.txt  P3_FINAL_1673732333.txt
lib/: LJM_Utilities.h
logs/: P1_1672941136.txt  P1_1673725599.txt  P1_1673727368.txt  P1_1673727691.txt  P1_1673727713.txt  P2_1673730912.txt  TC3_1673724284.txt  TC7_1673724494.txt  THERMOCOUPLE2_1673723535.txt
proto/: CMakeLists.txt  log.proto
